SLF4j logging and linting